# py-stats-collector

./: .gitignore  README.md  pyproject.toml
src/stats_collector/: __init__.py  stats_collector.py
